[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-dsa-coach"
version = "1.0.0"
description = "Adaptive DSA Coach OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
  "openenv[core]>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]